# pris

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Vagrantfile  build.rs  build_msys.sh  building.html  changelog.md  contributing.md  default.nix  flake.nix  function-reference.html  getting-started.html  index.html  lines.pris  makefile  mkdocs.yml  nixpkgs-pinned.nix  readme.md  roadmap.md  sitemap.xml  slides.pris  slides_no_comments.pris  style.css
README.theme/: index.html
background/: index.html
building/: index.html
cairo/: main.c  makefile
docs/: background.md  building.md  compiling.md  getting-started.md  ideas.md  index.md  language.md  name.md  parser.md  subframes.md
etc/: Pris.g4  pris.y
examples/: adjoin.pris  arrows.pris  background_color.pris  canvas_size.pris  fit.pris  font_features.pris  function.pris  glyph.pris  hello_world.pris  hyperlink.pris  image.pris  infix_call.pris  lay_out.pris  lines.pris  lines_and_text.pris  list.pris  multiline.pris  polygon.pris  raw_string.pris  rectangles.pris  roundrect.pris  scale.pris  shapes.pris  slides_no_comments.pris  text.pris
getting-started/: index.html
language/: index.html
name/: index.html
parser/: index.html
search/: search_index.json
src/: ast.h  ast.rs  builtins.rs  cairo.rs  driver.rs  elements.rs  error.rs  fontconfig.rs  harfbuzz.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  names.rs  parser.rs  parser_utils.rs  png.rs  pretty.rs  rsvg.rs  runtime.rs  syntax.l  syntax.lalrpop  syntax.y  syntax.ypp  types.rs
subframes/: index.html
tests/: eval.rs  (+1 more)
(+31 files in other folders)
