[package]
name    = "pris"
version = "0.1.0"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]

[dependencies]
docopt          = "0.7"  # TODO: Upgrade to 0.8 too.
freetype-rs     = "0.11"
rustc-serialize = "0.3"

[features]
# Support for hyperlinks is a recent addition to Cairo, and is disabled by
# default, to support systems with older versions of Cairo. Can be safely
# enabled for Cairo 1.15.4 or later.
default   = []
hyperlink = []
