[package]
name    = "pris"
version = "0.1.0"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]

[dependencies]
docopt          = "0.8"
freetype-rs     = "0.18"
serde           = "1.0"
serde_derive    = "1.0"

[features]
# Support for hyperlinks is a recent addition to Cairo, and is disabled by
# default, to support systems with older versions of Cairo. Can be safely
# enabled for Cairo 1.15.4 or later.
default   = []
hyperlink = []
